--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+}
+
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 html,
@@ -10,3 +15,50 @@ body {
 }
 
 /* Add styles here! */
+
+.max-width-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+}
+
+.intro-chunk {
+  max-width: 50%;
+  padding: 48px 16px;
+}
+
+header strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  border-top: 6px solid hsl(0deg, 0%, 40%);
+  padding: 64px 0px;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  border-bottom: 6px solid hsl(0deg, 0%, 40%);
+  padding: 16px;
+  padding-bottom: 16px;
+}
+
+h2 {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 6px solid hsl(45deg, 100%, 40%);
+  display: inline-block;
+  margin-left: -24px;
+  margin-top: -8px;
+  margin-bottom: 8px;
+  padding: 16px;
+}
+
+@media screen and (max-width: 640px) {
+  .intro-chunk {
+    max-width: 100%;
+  }
+  h2 {
+    margin-left: -16px;
+  }
+}
